Ensure background image fills entire screen on mobile

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -33,7 +33,7 @@ body {
 @media (max-width: 480px) {
     body {
         background-attachment: fixed;
-        background-size: fill;
+        background-size: 100% 100%;
         overflow-x: hidden;
     }
     .video-wrapper-dynamic {
